cloud-formation/cloud-formation.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description" : "eventbriteImages",
    "Parameters" : {
        "VpcId" : {
            "Type" : "String",
            "Description" : "VpcId of your existing Virtual Private Cloud (VPC)",
            "Default" : "vpc-e6e00183"
        },
        "Subnets" : {
            "Type" : "CommaDelimitedList",
            "Description" : "The list of SubnetIds in your Virtual Private Cloud (VPC)",
            "Default" : "subnet-cb91ae8d, subnet-a7b74ac2, subnet-179e8063"
        },
        "Stack": {
            "Description": "Applied directly as a tag ('membership', or 'memb-masterclasses')",
            "Type": "String",
            "Default": "membership"
        },
        "KeyName" : {
            "Description" : "The EC2 Key Pair to allow SSH access to the instance",
            "Type" : "String",
            "Default" : "aws-membership"
        },
        "Stage": {
            "Description" : "Applied directly as a tag",
            "Type" : "String",
            "Default" : "PROD"
        },
        "SiteDomain" : {
            "Description" : "Site domain Name (e.g. 'masterclasses-alpha.theguardian.com' or 'membership.theguardian.com')",
            "Type" : "String"
        },
        "AllowedIngressIps" : {
            "Description" : "IP address range (CIDR) that access the site (e.g. '77.91.248.0/21'- Internal Guardian, or '0.0.0.0/0' - the whole internet!)",
            "Type" : "String",
            "Default" : "77.91.248.0/21"
        },
        "InstanceType" : {
            "Description" : "EC2 instance type",
            "Type" : "String",
            "Default" : "t2.micro",
            "AllowedValues" : [ "t2.micro"],
            "ConstraintDescription" : "must be a valid EC2 instance type."
        }
    },
    "Resources" : {

        "EventbriteImagesAutoScalingGroup" : {
            "Type" : "AWS::AutoScaling::AutoScalingGroup",
            "Properties" : {
                "AvailabilityZones" : { "Fn::GetAZs" : "" },
                "VPCZoneIdentifier" : { "Ref" : "Subnets" },
                "LaunchConfigurationName" : { "Ref" : "EventbriteImagesLaunchConfig" },
                "MinSize" : "1",
                "MaxSize" : "2",
                "DesiredCapacity" : "1",
                "LoadBalancerNames" : [ { "Ref" : "EventbriteImagesElasticLoadBalancer" } ],
                "HealthCheckType" : "ELB",
                "HealthCheckGracePeriod" : 300,
                "Tags" : [
                    { "Key" : "Stack", "Value" : { "Ref" : "Stack" }, "PropagateAtLaunch" : "true" },
                    { "Key" : "App", "Value" : "memb-eventbriteImages", "PropagateAtLaunch" : "true" },
                    { "Key" : "Stage", "Value" : { "Ref" : "Stage" }, "PropagateAtLaunch" : "true"  }
                ]
            }
        },

        "EventbriteImagesLaunchConfig" : {
            "Type" : "AWS::AutoScaling::LaunchConfiguration",
            "Properties" : {
                "ImageId" : "ami-3e984649",
                "SecurityGroups" : [ { "Ref" : "InstanceSecurityGroup" } ],
                "InstanceType" : { "Ref" : "InstanceType" },
                "KeyName" : { "Ref" : "KeyName" },
                "IamInstanceProfile": { "Ref" : "MembershipAppInstanceProfile" },
                "AssociatePublicIpAddress": true,
                "UserData" : { "Fn::Base64": {
                    "Fn::Join":["\n", [
                        "#!/bin/bash -ev",
                        {"Fn::Join":["", ["wget -N --directory-prefix=/home/ubuntu/.ssh https://s3-eu-west-1.amazonaws.com/membership-dist/", { "Ref" : "Stack" }, "/authorized_keys &"]]},

                        {"Fn::Join":["", ["echo https://s3-eu-west-1.amazonaws.com/membership-dist/", { "Ref" : "Stack" }, "/", { "Ref" : "Stage" }, "/memb-eventbriteImages/app.zip > /etc/gu-artifact-url" ]]},

                        "adduser --system --home /membership --disabled-password membership",

                        "wget -i /etc/gu-artifact-url --directory-prefix=/tmp",

                        "unzip -d /memb-eventbriteImages /tmp/app.zip",

                        "/memb-eventbriteImages/server.sh"
                    ]]
                }}
            }
        },

        "MembershipAppRole" : {
            "Type" : "AWS::IAM::Role",
            "Properties":{
                "Path":"/",
                "AssumeRolePolicyDocument": {
                    "Statement": [ {
                        "Effect": "Allow",
                        "Principal": { "Service": [ "ec2.amazonaws.com" ] },
                        "Action": [ "sts:AssumeRole" ]
                    }]
                },
                "Policies": [{
                    "PolicyName": "PrivateBucket",
                    "PolicyDocument": {
                        "Version": "2012-10-17",
                        "Statement": [
                            {
                                "Effect": "Allow",
                                "Action": "s3:GetObject",
                                "Resource": "arn:aws:s3:::membership-private/*"
                            }
                        ]
                    }
                }]
            }
        },
        "MembershipAppInstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [ {
                    "Ref": "MembershipAppRole"
                } ]
            }
        },

        "EventbriteImagesElasticLoadBalancer" : {
            "Type" : "AWS::ElasticLoadBalancing::LoadBalancer",
            "Properties" : {
                "Listeners" : [ {
                    "LoadBalancerPort": "443",
                    "InstancePort": 80,
                    "Protocol": "HTTP"
                }],
                "SecurityGroups" : [ { "Ref" : "LoadBalancerSecurityGroup" } ],
                "Subnets" : { "Ref" : "Subnets" },
                "HealthCheck" : {
                    "Target" : "HTTP:3000/healthcheck",
                    "HealthyThreshold" : "2",
                    "UnhealthyThreshold" : "2",
                    "Interval" : "10",
                    "Timeout" : "5"
                }
            }
        },
        "LoadBalancerSecurityGroup" : {
            "Type" : "AWS::EC2::SecurityGroup",
            "Properties" : {
                "GroupDescription" : "Permit incoming HTTP access on port 80, egress to port 9000",
                "VpcId" : { "Ref" : "VpcId" },
                "SecurityGroupIngress" : [
                    { "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": { "Ref" : "AllowedIngressIps" } },
                    { "IpProtocol": "tcp", "FromPort": "80",  "ToPort": "80",  "CidrIp": "80.254.158.92/32" },
                    { "IpProtocol": "tcp", "FromPort": "80",  "ToPort": "80",  "CidrIp": "80.254.146.68/32" }
                ],
                "SecurityGroupEgress" : [
                    { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0" }
                ]
            }
        },
        "InstanceSecurityGroup" : {
            "Type" : "AWS::EC2::SecurityGroup",
            "Properties" : {
                "GroupDescription" : "Open up SSH access and enable HTTP access on the configured port",
                "VpcId" : { "Ref" : "VpcId" },
                "SecurityGroupIngress" : [
                    { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": "77.91.248.0/21" },
                    { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "77.91.248.0/21" },
                    { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "SourceSecurityGroupId" : { "Ref" : "LoadBalancerSecurityGroup" } }
                ]
            }
        },
        "EventbriteImagesELBDNSrecord" : {
            "Type" : "AWS::Route53::RecordSet",
            "Properties" : {
                "HostedZoneId" : "/hostedzone/Z1E4V12LQGXFEC",
                "Comment" : "CNAME for AWS ELB",
                "Name" :  { "Fn::Join" : [ ".", [ { "Ref" : "SiteDomain" }, "origin.membership.guardianapis.com." ] ] },
                "Type" : "CNAME",
                "TTL" : "120",
                "ResourceRecords" : [ {"Fn::GetAtt":["EventbriteImagesElasticLoadBalancer","DNSName"]} ]
            }
        }
    },
    "Outputs": {
        "URL" : {
            "Description" : "URL of the EventbriteImages website",
            "Value" :  { "Fn::Join" : [ "", [ "https://", { "Fn::GetAtt" : [ "EventbriteImagesElasticLoadBalancer", "DNSName" ]}]]}
        }
    }
}
